<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ini_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/aqua"
        android:gravity="center"
        android:paddingBottom="@dimen/double_padding"
        android:paddingLeft="@dimen/general_padding"
        android:paddingRight="@dimen/general_padding"
        android:paddingTop="@dimen/double_padding"
        android:text="@string/txt_frag1"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_intro_frag"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/general_padding"
        android:text="@string/txt_intro_desc"
        android:textSize="@dimen/txt_intro_desc" />

    <EditText
        android:id="@+id/txt_your_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:capitalize="sentences"
        android:gravity="center"
        android:hint="@string/hint_intro"
        android:padding="@dimen/medium_padding"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_intro_desc" />

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/general_padding"
        android:background="@color/dark_aqua"
        android:padding="@dimen/general_padding"
        android:text="@string/txt_btn_intro"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_intro_desc" />

</LinearLayout>
