<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ini_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_bienvenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/aqua"
        android:gravity="center"
        android:paddingBottom="@dimen/double_padding"
        android:paddingLeft="@dimen/general_padding"
        android:paddingRight="@dimen/general_padding"
        android:paddingTop="@dimen/double_padding"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_intro_frag"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/general_padding"
        android:text="@string/txt_action_desc"
        android:textSize="@dimen/txt_intro_desc" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/general_padding"
        android:text="@string/txt_action_callto"
        android:textSize="@dimen/txt_intro_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_padding"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_phonecall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/medium_padding"
            android:background="@color/green_call"
            android:paddingLeft="@dimen/medium_padding"
            android:paddingRight="@dimen/medium_padding"
            android:text="@string/txt_btn_phone"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_padding"
            android:background="@color/blue_face"
            android:paddingLeft="@dimen/medium_padding"
            android:paddingRight="@dimen/medium_padding"
            android:text="@string/txt_btn_face"
            android:textColor="@color/white" />


    </LinearLayout>


</LinearLayout>
